--- a/OnlineSoccerShopping/ClientApp/src/Navigation/NavMenu.css
+++ b/OnlineSoccerShopping/ClientApp/src/Navigation/NavMenu.css
@@ -1,33 +1,1 @@
-﻿a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
-}
-
-html {
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-}
-
-.nav{
-  background-color: #3472af;
-}
-.alert-success {
-  position: fixed;
-  top: 20px;
-  right: 20px;
-  opacity: 1;
-  transition: opacity 1s ease-in-out;
-}
-
-.alert-success.hide {
-  opacity: 0;
-}
+﻿ 
